--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,25 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.container {
+  text-align: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.input-wrapper {
+  margin: 10px;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.input-field {
+  width: 200px;
+  height: 30px;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.button {
+  width: 200px;
+  height: 30px;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.button-link {
+  border: 0;
+  cursor: pointer;
+  background-color: transparent;
+  color: skyblue;
+  margin: 20px;
 }
