--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,13 @@
   color: skyblue;
   margin: 20px;
 }
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding: 10px;
+}
+
+table > td > button {
+  margin: 5px;
+}
