--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
+*:focus {
+  outline: none;
+}
+
 .container {
   text-align: center;
 }
@@ -24,7 +28,9 @@
   margin: 20px;
 }
 
-table, th, td {
+table,
+th,
+td {
   border: 1px solid black;
   border-collapse: collapse;
   padding: 10px;
@@ -32,4 +38,56 @@ table, th, td {
 
 table > td > button {
   margin: 5px;
+}
+
+.main-page-banner {
+  background-image: url("https://img.freepik.com/free-photo/delicious-indian-food-tray_23-2148723505.jpg?w=900&t=st=1726910828~exp=1726911428~hmac=1cc6a456db93d0ca258e9007ac9283678db978f3d06b2d7be8fea6dce76a0952");
+  background-color: rgb(0, 0, 0, 0.4);
+  background-blend-mode: multiply;
+  padding: 30px;
+  height: 230px;
+  color: white;
+  text-align: center;
+}
+
+.input-wrapper {
+  background-color: white;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin: auto;
+  width: 70%;
+}
+
+.select-input {
+  height: 40px;
+  border: none;
+  width: 30%;
+}
+
+.search-input {
+  height: 40px;
+  border: none;
+  width: 65%;
+  border-left: 1px solid #ccc;
+  padding-left: 15px;
+}
+
+.location-list {
+  color: black;
+  list-style-type: none;
+  text-align: left;
+  position: absolute;
+  background-color: #ccc;
+  padding: 0;
+  margin-left: -5px;
+  margin: 0;
+  border: 1px solid #ccc;
+}
+
+.location-list li {
+  width: 150px;
+  padding: 5px;
+  border-bottom: 1px solid #ccc;
+  cursor: pointer;
 }
