--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,3 +91,33 @@ table > td > button {
   border-bottom: 1px solid #ccc;
   cursor: pointer;
 }
+
+.restaurant-list-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 40px;
+  margin-bottom: 50px;
+}
+
+.restaurant-wrapper {
+  width: 45%;
+  background-color: orange;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.heading-wrapper {
+  padding-left: 15px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.address-wrapper {
+  padding-left: 15px;
+  display: flex;
+  justify-content: flex-start;
+}
