Modified css file

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,33 @@ table > td > button {
   margin: 5px;
 }
 
+.header-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-wrapper > ul {
+  display: flex;
+}
+
+.header-wrapper > ul > li {
+  list-style-type: none;
+  padding: 5px;
+}
+
+.header-wrapper > ul > li > a {
+  text-decoration: none;
+}
+
+.footer-wrapper {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 10px;
+  background-color: white;
+}
+
 .main-page-banner {
   background-image: url("https://img.freepik.com/free-photo/delicious-indian-food-tray_23-2148723505.jpg?w=900&t=st=1726910828~exp=1726911428~hmac=1cc6a456db93d0ca258e9007ac9283678db978f3d06b2d7be8fea6dce76a0952");
   background-color: rgb(0, 0, 0, 0.4);
