--- a/src/app/restaurant/style.css
+++ b/src/app/restaurant/style.css
@@ -1,4 +1,4 @@
-.header-wrapper {
+/* .header-wrapper {
   display: flex;
   justify-content: space-between;
 }
@@ -23,4 +23,4 @@
   text-align: center;
   font-size: 10px;
   background-color: white;
-}
+} */
