--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -148,3 +148,13 @@ table > td > button {
   display: flex;
   justify-content: flex-start;
 }
+
+.restaurant-page-banner{
+  background-image: url("https://img.freepik.com/free-photo/delicious-indian-food-tray_23-2148723505.jpg?w=900&t=st=1726910828~exp=1726911428~hmac=1cc6a456db93d0ca258e9007ac9283678db978f3d06b2d7be8fea6dce76a0952");
+  background-color: rgb(0, 0, 0, 0.4);
+  background-blend-mode: multiply;
+  padding: 30px;
+  height: 230px;
+  color: white;
+  text-align: center;
+  }
