--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -149,7 +149,7 @@ table > td > button {
   justify-content: flex-start;
 }
 
-.restaurant-page-banner{
+.restaurant-page-banner {
   background-image: url("https://img.freepik.com/free-photo/delicious-indian-food-tray_23-2148723505.jpg?w=900&t=st=1726910828~exp=1726911428~hmac=1cc6a456db93d0ca258e9007ac9283678db978f3d06b2d7be8fea6dce76a0952");
   background-color: rgb(0, 0, 0, 0.4);
   background-blend-mode: multiply;
@@ -157,4 +157,45 @@ table > td > button {
   height: 230px;
   color: white;
   text-align: center;
-  }
+}
+
+.detail-wrapper {
+  display: flex;
+  background-color: orange;
+}
+
+.detail-wrapper h4 {
+  width: 50%;
+}
+
+.food-item-wrapper {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.food-item-wrapper .list-item {
+  color: orange;
+  font-weight: bold;
+  border-bottom: 1px solid orange;
+  padding: 20px;
+  display: flex;
+  text-transform: capitalize;
+}
+
+.food-item-wrapper .list-item button {
+  color: #fff;
+  border: none;
+  background-color: orange;
+  padding: 5px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.food-item-wrapper .list-item img {
+  width: 100px;
+  padding-right: 20px;
+}
+
+.food-item-wrapper .list-item .description {
+  font-weight: lighter;
+}
