Added delete foodItem functionality and created cart page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -199,3 +199,15 @@ table > td > button {
 .food-item-wrapper .list-item .description {
   font-weight: lighter;
 }
+
+.list-item-block-1 {
+  width: 20%;
+}
+
+.list-item-block-2 {
+  width: 80%;
+}
+
+.list-item-block-3 {
+  width: 20%;
+}
